Alternating edge werkt nu niet meer met een list van Strings, maar een list van integers. (Er was daar het probleem om een Int object te removen en niet de index, dat is nu dus opgelost).